old_config/k8s-dashboard-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"labels":{"name":"kube-dashboard"},"name":"kube-dashboard"}}
  creationTimestamp: "2024-11-14T13:23:20Z"
  labels:
    kubernetes.io/metadata.name: kube-dashboard
    name: kube-dashboard
  name: kube-dashboard
  resourceVersion: "491227"
  uid: 8cdafc9e-b589-4e3d-97e1-87b07cbf4fdc
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
