old_config/deployment-n8n.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"n8n"},"name":"n8n","namespace":"n8n"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"n8n"}},"template":{"metadata":{"labels":{"app":"n8n"}},"spec":{"containers":[{"env":[{"name":"N8N_PORT","value":"5678"},{"name":"GENERIC_TIMEZONE","value":"UTC"},{"name":"TZ","value":"UTC"}],"image":"docker.n8n.io/n8nio/n8n","name":"n8n","ports":[{"containerPort":5678}],"resources":{"limits":{"cpu":"500m","mem [...]
  creationTimestamp: "2025-05-26T10:47:06Z"
  generation: 9
  labels:
    app: n8n
  name: n8n
  namespace: n8n
  resourceVersion: "32601677"
  uid: 6770810d-5352-4781-891f-3a40f5491b0c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: n8n
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-05-26T16:45:46+03:00"
      creationTimestamp: null
      labels:
        app: n8n
    spec:
      containers:
      - env:
        - name: N8N_PORT
          value: "5678"
        - name: GENERIC_TIMEZONE
          value: UTC
        - name: TZ
          value: UTC
        image: docker.n8n.io/n8nio/n8n
        imagePullPolicy: IfNotPresent
        name: n8n
        ports:
        - containerPort: 5678
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/node/.n8n
          name: n8n-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-data
      tolerations:
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 300
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 300
        - key: "node.kubernetes.io/network-unavailable"
          operator: "Exists"
          effect: "NoSchedule"
status:
  conditions:
  - lastTransitionTime: "2025-05-26T10:47:06Z"
    lastUpdateTime: "2025-05-28T06:27:09Z"
    message: ReplicaSet "n8n-9c5c6d5cb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-05-28T12:51:52Z"
    lastUpdateTime: "2025-05-28T12:51:52Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 9
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
