old_config/pod-n8n-9c5c6d5cb-5qmhr.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/restartedAt: "2025-05-26T16:45:46+03:00"
  creationTimestamp: "2025-05-28T13:23:16Z"
  generateName: n8n-9c5c6d5cb-
  labels:
    app: n8n
    pod-template-hash: 9c5c6d5cb
  name: n8n-9c5c6d5cb-5qmhr
  namespace: n8n
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: n8n-9c5c6d5cb
    uid: fa30545a-3d0f-46ef-a1ba-3a545ae40f3e
  resourceVersion: "32601674"
  uid: 94bdb21a-5e8c-4b07-888b-d8db835b165c
spec:
  containers:
  - env:
    - name: N8N_PORT
      value: "5678"
    - name: GENERIC_TIMEZONE
      value: UTC
    - name: TZ
      value: UTC
    image: docker.n8n.io/n8nio/n8n
    imagePullPolicy: IfNotPresent
    name: n8n
    ports:
    - containerPort: 5678
      protocol: TCP
    resources:
      limits:
        cpu: 500m
        memory: 512Mi
      requests:
        cpu: 200m
        memory: 256Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /home/node/.n8n
      name: n8n-data
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-ck64p
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  - key: "node.kubernetes.io/network-unavailable"
    operator: "Exists"
    effect: "NoSchedule"
  volumes:
  - name: n8n-data
    persistentVolumeClaim:
      claimName: n8n-data
  - name: kube-api-access-ck64p
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2025-05-28T13:23:16Z"
    message: '0/5 nodes are available: 1 node(s) had untolerated taint {node.kubernetes.io/unreachable:
      }. preemption: 0/5 nodes are available: 5 Preemption is not helpful for scheduling.'
    reason: Unschedulable
    status: "False"
    type: PodScheduled
  phase: Pending
  qosClass: Burstable
