old_config/k8s-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules :
  - host: grafana.k8s.local
  defaultBackend:
    service:
      name: grafana
      port:
        number: 3000
