old_config/k8s-podinfo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules :
  - host: podinfo.k8s.local
  defaultBackend:
    service:
      name: podinfo
      port:
        number: 9898
